Add media query to About section and minor adjustments elsewhere

--- a/index.html
+++ b/index.html
@@ -231,20 +231,21 @@
           <h3>Languages</h3>
           <i class="fa-solid fa-chevron-down"></i>
         </div>
+        <div class="lang-row">
+          <div class="lang-divs" id="lang">
+            <img src="./Languages Pictures/JS.png" alt="" />
+            <h6>Javascript</h6>
+          </div>
 
-        <div class="lang-divs" id="lang">
-          <img src="./Languages Pictures/JS.png" alt="" />
-          <h6>Javascript</h6>
-        </div>
+          <div class="lang-divs" id="lang">
+            <img src="./Languages Pictures/HTML.png" alt="" />
+            <h6>HTML</h6>
+          </div>
 
-        <div class="lang-divs" id="lang">
-          <img src="./Languages Pictures/HTML.png" alt="" />
-          <h6>HTML</h6>
-        </div>
-
-        <div class="lang-divs" id="lang">
-          <img src="./Languages Pictures/CSS.png" alt="" />
-          <h6>CSS</h6>
+          <div class="lang-divs" id="lang">
+            <img src="./Languages Pictures/CSS.png" alt="" />
+            <h6>CSS</h6>
+          </div>
         </div>
 
         <div class="lang-skills">
@@ -257,7 +258,7 @@
 
         <div class="lang-skills">
           <h3>Skills</h3>
-          <i class="fa-solid fa-chevron-right"></i>
+          <i class="fa-solid fa-chevron-right" id="skills-arrow"></i>
         </div>
         <div class="lang-seperators">
           <img src="./Languages Pictures/Separator Bottom.png" alt="" />
