Work section img resize Adjustment

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section class="work">
       <article class="card" id="work-article-1">
         <a href="" class="snapshot">
-          <img src="./Worksection Pics/snap1.png" alt="" />
+          <img src="./Worksection Pics/snap1.png" alt="" width="100%" />
         </a>
         <ul class="leftblock">
           <li .primarytext>
@@ -97,7 +97,7 @@
       </article>
       <article class="card" id="work-article-2">
         <a href="" class="snapshot" id="swap-pos">
-          <img src="./Worksection Pics/snap2.png" alt="" />
+          <img src="./Worksection Pics/snap2.png" alt="" width="100%" />
         </a>
         <ul class="leftblock2" id="pos-swap">
           <li .primarytext>
@@ -128,7 +128,7 @@
       </article>
       <article class="card" id="work-article-3">
         <a href="" class="snapshot">
-          <img src="./Worksection Pics/snap3.png" alt="" />
+          <img src="./Worksection Pics/snap3.png" alt="" width="100%" />
         </a>
         <ul class="leftblock">
           <li .primarytext>
@@ -159,7 +159,7 @@
       </article>
       <article class="card" id="work-article-4">
         <a href="" class="snapshot" id="swap-pos">
-          <img src="./Worksection Pics/snap4.png" alt="" />
+          <img src="./Worksection Pics/snap4.png" alt="" width="100%" />
         </a>
         <ul class="leftblock2" id="pos-swap">
           <li .primarytext>
