Replace one img of card section in work section

--- a/index.html
+++ b/index.html
@@ -128,7 +128,18 @@
       </article>
       <article class="card" id="work-article-3">
         <a href="" class="snapshot">
-          <img src="./Worksection Pics/snap3.png" alt="" width="100%" />
+          <img
+            src="./desktopPics/newsnap.png"
+            alt=""
+            width="100%"
+            class="w3imgdt"
+          />
+          <img
+            src="./Worksection Pics/snap3.png"
+            alt=""
+            width="100%"
+            class="w3imgmb"
+          />
         </a>
         <ul class="leftblock">
           <li .primarytext>
