--- a/index.html
+++ b/index.html
@@ -35,32 +35,32 @@
         <br />
         Glad to see you!
       </h1>
-
       <p>
         I'm a software developer! I can help you build a product, feature or
         website look through some of my work and experience! If you like what
         you see and have a project you need coded, don't hesitate to contact me.
       </p>
-
       <h6>LET'S CONNECT</h6>
 
-      <ul class="social-container">
-        <li>
-          <a href=""><img src="./Pictures/Social/twitter.png" alt="" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./Pictures/Social/linkedin.png" alt="" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./Pictures/Social/m.png" alt="" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./Pictures/Social/github.png" alt="" /></a>
-        </li>
-        <li>
-          <a href=""><img src="./Pictures/Social/victory.png" alt="" /></a>
-        </li>
-      </ul>
+      <div class="hero-socialcontainer">
+        <ul class="social-container">
+          <li>
+            <a href=""><img src="./Pictures/Social/twitter.png" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./Pictures/Social/linkedin.png" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./Pictures/Social/m.png" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./Pictures/Social/github.png" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./Pictures/Social/victory.png" alt="" /></a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section class="work">
