Add Transition to class btn

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <a href="" class="snapshot" id="swap-pos">
           <img src="./Worksection Pics/snap2.png" alt="" width="100%" />
         </a>
-        <ul class="leftblock2" id="pos-swap">
+        <ul class="leftblock" id="pos-swap">
           <li .primarytext>
             <h2>Multi-Post Stories</h2>
             <div class="frame">
@@ -172,7 +172,7 @@
         <a href="" class="snapshot" id="swap-pos">
           <img src="./Worksection Pics/snap4.png" alt="" width="100%" />
         </a>
-        <ul class="leftblock2" id="pos-swap">
+        <ul class="leftblock" id="pos-swap">
           <li .primarytext>
             <h2>Multi-Post Stories</h2>
             <div class="frame">
