Add Image Text Alternatives

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="toolbar">
       <nav>
         <a class="logo-nav" href=""
-          ><img src="./Pictures/My Logo.png" alt="" />
+          ><img src="./Pictures/My Logo.png" alt="Website Logo" />
         </a>
         <ul>
           <li>Portfolio</li>
@@ -24,7 +24,11 @@
           <li>Contact</li>
         </ul>
         <a href="">
-          <img class="burger-menu" src="./Pictures/Union.png" alt="Menu bar" />
+          <img
+            class="burger-menu"
+            src="./Pictures/Union.png"
+            alt="Burger Menu"
+          />
         </a>
       </nav>
     </header>
@@ -45,19 +49,27 @@
       <div class="hero-socialcontainer">
         <ul class="social-container">
           <li>
-            <a href=""><img src="./Pictures/Social/twitter.png" alt="" /></a>
+            <a href=""
+              ><img src="./Pictures/Social/twitter.png" alt="Twitter logo"
+            /></a>
           </li>
           <li>
-            <a href=""><img src="./Pictures/Social/linkedin.png" alt="" /></a>
+            <a href=""
+              ><img src="./Pictures/Social/linkedin.png" alt="Linkedin logo"
+            /></a>
           </li>
           <li>
-            <a href=""><img src="./Pictures/Social/m.png" alt="" /></a>
+            <a href=""><img src="./Pictures/Social/m.png" alt="m logo" /></a>
           </li>
           <li>
-            <a href=""><img src="./Pictures/Social/github.png" alt="" /></a>
+            <a href=""
+              ><img src="./Pictures/Social/github.png" alt="Github logo"
+            /></a>
           </li>
           <li>
-            <a href=""><img src="./Pictures/Social/victory.png" alt="" /></a>
+            <a href=""
+              ><img src="./Pictures/Social/victory.png" alt="Victory logo"
+            /></a>
           </li>
         </ul>
       </div>
@@ -66,16 +78,24 @@
     <section class="work">
       <article class="card" id="work-article-1">
         <a href="" class="snapshot">
-          <img src="./Worksection Pics/snap1.png" alt="" width="100%" />
+          <img
+            src="./Worksection Pics/snap1.png"
+            alt="First Project demo"
+            width="100%"
+          />
         </a>
         <ul class="leftblock">
           <li .primarytext>
             <h2>Tonic</h2>
             <div class="frame">
               <a href="" class="client"><h6 class="clienttext">Canopy</h6></a>
-              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""
+                ><img src="./Worksection Pics/Counter.png" alt="Counter"
+              /></a>
               <a href="" class="role"><h6 class="roletext">Back End Dev</h6></a>
-              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""
+                ><img src="./Worksection Pics/Counter.png" alt="Counter"
+              /></a>
               <a href="" class="year"><h6 class="yeartext">2015</h6></a>
             </div>
           </li>
@@ -97,16 +117,24 @@
       </article>
       <article class="card" id="work-article-2">
         <a href="" class="snapshot" id="swap-pos">
-          <img src="./Worksection Pics/snap2.png" alt="" width="100%" />
+          <img
+            src="./Worksection Pics/snap2.png"
+            alt="Second Project demo"
+            width="100%"
+          />
         </a>
         <ul class="leftblock" id="pos-swap">
           <li .primarytext>
             <h2>Multi-Post Stories</h2>
             <div class="frame">
               <a href="" class="client"><h6 class="clienttext">Canopy</h6></a>
-              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""
+                ><img src="./Worksection Pics/Counter.png" alt="Counter"
+              /></a>
               <a href="" class="role"><h6 class="roletext">Back End Dev</h6></a>
-              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""
+                ><img src="./Worksection Pics/Counter.png" alt="Counter"
+              /></a>
               <a href="" class="year"><h6 class="yeartext">2015</h6></a>
             </div>
           </li>
@@ -130,13 +158,13 @@
         <a href="" class="snapshot">
           <img
             src="./desktopPics/newsnap.png"
-            alt=""
+            alt="Desktop Third Project demo"
             width="100%"
             class="w3imgdt"
           />
           <img
             src="./Worksection Pics/snap3.png"
-            alt=""
+            alt="Third Project demo"
             width="100%"
             class="w3imgmb"
           />
@@ -146,9 +174,13 @@
             <h2>Tonic</h2>
             <div class="frame">
               <a href="" class="client"><h6 class="clienttext">Canopy</h6></a>
-              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""
+                ><img src="./Worksection Pics/Counter.png" alt="Counter"
+              /></a>
               <a href="" class="role"><h6 class="roletext">Back End Dev</h6></a>
-              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""
+                ><img src="./Worksection Pics/Counter.png" alt="Counter"
+              /></a>
               <a href="" class="year"><h6 class="yeartext">2015</h6></a>
             </div>
           </li>
@@ -170,16 +202,24 @@
       </article>
       <article class="card" id="work-article-4">
         <a href="" class="snapshot" id="swap-pos">
-          <img src="./Worksection Pics/snap4.png" alt="" width="100%" />
+          <img
+            src="./Worksection Pics/snap4.png"
+            alt="Fourth Project demo"
+            width="100%"
+          />
         </a>
         <ul class="leftblock" id="pos-swap">
           <li .primarytext>
             <h2>Multi-Post Stories</h2>
             <div class="frame">
               <a href="" class="client"><h6 class="clienttext">Canopy</h6></a>
-              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""
+                ><img src="./Worksection Pics/Counter.png" alt="Counter"
+              /></a>
               <a href="" class="role"><h6 class="roletext">Back End Dev</h6></a>
-              <a href=""><img src="./Worksection Pics/Counter.png" alt="" /></a>
+              <a href=""
+                ><img src="./Worksection Pics/Counter.png" alt="Counter"
+              /></a>
               <a href="" class="year"><h6 class="yeartext">2015</h6></a>
             </div>
           </li>
@@ -219,19 +259,27 @@
 
         <ul class="social-container">
           <li>
-            <a href=""><img src="./Pictures/Social/github.png" alt="" /></a>
+            <a href=""
+              ><img src="./Pictures/Social/github.png" alt="Github logo"
+            /></a>
           </li>
           <li>
-            <a href=""><img src="./Pictures/Social/linkedin.png" alt="" /></a>
+            <a href=""
+              ><img src="./Pictures/Social/linkedin.png" alt="Linkedin logo"
+            /></a>
           </li>
           <li>
-            <a href=""><img src="./Pictures/Social/victory.png" alt="" /></a>
+            <a href=""
+              ><img src="./Pictures/Social/victory.png" alt="Victory logo"
+            /></a>
           </li>
           <li>
-            <a href=""><img src="./Pictures/Social/twitter.png" alt="" /></a>
+            <a href=""
+              ><img src="./Pictures/Social/twitter.png" alt="Twitter logo"
+            /></a>
           </li>
           <li>
-            <a href=""><img src="./Pictures/Social/m.png" alt="" /></a>
+            <a href=""><img src="./Pictures/Social/m.png" alt="m logo" /></a>
           </li>
         </ul>
         <a class="btn1">Get my resume</a>
@@ -244,17 +292,17 @@
         </div>
         <div class="lang-row">
           <div class="lang-divs" id="lang">
-            <img src="./Languages Pictures/JS.png" alt="" />
+            <img src="./Languages Pictures/JS.png" alt="Javascript logo" />
             <h6>Javascript</h6>
           </div>
 
           <div class="lang-divs" id="lang">
-            <img src="./Languages Pictures/HTML.png" alt="" />
+            <img src="./Languages Pictures/HTML.png" alt="HTML logo" />
             <h6>HTML</h6>
           </div>
 
           <div class="lang-divs" id="lang">
-            <img src="./Languages Pictures/CSS.png" alt="" />
+            <img src="./Languages Pictures/CSS.png" alt="CSS logo" />
             <h6>CSS</h6>
           </div>
         </div>
@@ -264,7 +312,10 @@
           <i class="fa-solid fa-chevron-right"></i>
         </div>
         <div class="lang-seperators">
-          <img src="./Languages Pictures/Separator Bottom.png" alt="" />
+          <img
+            src="./Languages Pictures/Separator Bottom.png"
+            alt="Seperator"
+          />
         </div>
 
         <div class="lang-skills">
@@ -272,7 +323,10 @@
           <i class="fa-solid fa-chevron-right" id="skills-arrow"></i>
         </div>
         <div class="lang-seperators">
-          <img src="./Languages Pictures/Separator Bottom.png" alt="" />
+          <img
+            src="./Languages Pictures/Separator Bottom.png"
+            alt="Seperator"
+          />
         </div>
       </section>
     </section>
