Add label to form input

--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
       </p>
 
       <form action="https://formspree.io/f/xwkzojgo" method="post">
+        <label for="input-name">Name</label>
         <input
           name="namearea"
           id="input-name"
@@ -350,15 +351,16 @@
           placeholder="Name"
           required
         />
-
+        <label for="Email">Email</label>
         <input
+        id="Email"
           name="emailarea"
           class="input"
           type="email"
           placeholder="Email"
           required
         />
-
+        <label for="textarea">Write your message here</label>
         <textarea
           name="textarea"
           id="textarea"
