Page title corrected

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/a5120177aa.js"
       crossorigin="anonymous"
     ></script>
-    <title>Portfolio Website</title>
+    <title>Nabeel's Portfolio</title>
   </head>
 
   <body>
@@ -353,7 +353,7 @@
         />
         <label for="Email">Email</label>
         <input
-        id="Email"
+          id="Email"
           name="emailarea"
           class="input"
           type="email"
