Add menu bar with html and css and link js file to html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li>About</li>
           <li>Contact</li>
         </ul>
-        <a href="">
+        <a id="menu-header" href="">
           <img
             class="burger-menu"
             src="./Pictures/Union.png"
@@ -74,7 +74,13 @@
         </ul>
       </div>
     </section>
-
+    <section class="menu-bar" id="menuBar">
+      <ul>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </section>
     <section class="work">
       <article class="card" id="work-article-1">
         <a href="" class="snapshot">
@@ -376,5 +382,7 @@
         <input class="btn" type="submit" value="Get In Touch" />
       </form>
     </footer>
+
+    <script href="./index.js"></script>
   </body>
 </html>
