--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
           <li>About</li>
           <li>Contact</li>
         </ul>
-        <a id="menu-header" href="">
-          <img
-            class="burger-menu"
-            src="./Pictures/Union.png"
-            alt="Burger Menu"
-          />
-        </a>
+        <img
+          id="burgerMenu"
+          class="burger-menu"
+          src="./Pictures/Union.png"
+          alt="Burger Menu"
+        />
       </nav>
     </header>
 
@@ -74,13 +73,13 @@
         </ul>
       </div>
     </section>
-    <section class="menu-bar" id="menuBar">
+    <div class="menu-bar" id="menuBar">
       <ul>
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-    </section>
+    </div>
     <section class="work">
       <article class="card" id="work-article-1">
         <a href="" class="snapshot">
@@ -383,6 +382,6 @@
       </form>
     </footer>
 
-    <script href="./index.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
