Add links in desktop menu

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           ><img src="./Pictures/My Logo.png" alt="Website Logo" />
         </a>
         <ul>
-          <li>Portfolio</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a href="#port-folio">Portfolio</a></li>
+          <li><a href="#about-me">About</a></li>
+          <li><a href="#contactMe">Contact</a></li>
         </ul>
         <div class="burger" id="burgerMenu">
           <img
