Add . for js src file

--- a/index.html
+++ b/index.html
@@ -391,6 +391,6 @@
       </form>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
