Add class to worksection img

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       <article class="card" id="work-article-1">
         <a href="" class="snapshot">
           <img
+            class="image-1"
             src="./Worksection Pics/snap1.png"
             alt="First Project demo"
             width="100%"
@@ -132,6 +133,7 @@
       <article class="card" id="work-article-2">
         <a href="" class="snapshot" id="swap-pos">
           <img
+            class="image-2"
             src="./Worksection Pics/snap2.png"
             alt="Second Project demo"
             width="100%"
@@ -171,6 +173,7 @@
       <article class="card" id="work-article-3">
         <a href="" class="snapshot">
           <img
+            class="image-1"
             src="./desktopPics/newsnap.png"
             alt="Desktop Third Project demo"
             width="100%"
@@ -217,6 +220,7 @@
       <article class="card" id="work-article-4">
         <a href="" class="snapshot" id="swap-pos">
           <img
+            class="image-1"
             src="./Worksection Pics/snap4.png"
             alt="Fourth Project demo"
             width="100%"
