Add array of objects in javascript

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             ><a href="" class="tag3"><h3>javascript</h3> </a>
           </li>
           <li class="btn">
-            <a>See Project</a>
+            <a data-name="p-1" class="work-button btn-image">See Project</a>
           </li>
         </ul>
       </article>
@@ -166,14 +166,13 @@
             ><a href="" class="tag3"><h3>javascript</h3> </a>
           </li>
           <li class="btn">
-            <a>See Project</a>
+            <a data-name="p-2" class="work-button btn-image">See Project</a>
           </li>
         </ul>
       </article>
       <article class="card" id="work-article-3">
         <a href="" class="snapshot">
           <img
-            class="image-1"
             src="./desktopPics/newsnap.png"
             alt="Desktop Third Project demo"
             width="100%"
@@ -183,7 +182,7 @@
             src="./Worksection Pics/snap3.png"
             alt="Third Project demo"
             width="100%"
-            class="w3imgmb"
+            class="image-1 w3imgmb"
           />
         </a>
         <ul class="leftblock">
@@ -213,7 +212,7 @@
             ><a href="" class="tag3"><h3>javascript</h3> </a>
           </li>
           <li class="btn">
-            <a>See Project</a>
+            <a data-name="p-3" class="work-button btn-image">See Project</a>
           </li>
         </ul>
       </article>
@@ -253,7 +252,7 @@
             ><a href="" class="tag3"><h3>javascript</h3> </a>
           </li>
           <li class="btn">
-            <a>See Project</a>
+            <a data-name="p-4" class="work-button btn-image">See Project</a>
           </li>
         </ul>
       </article>
