Add popup function in Javascript

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             ><a href="" class="tag3"><h3>javascript</h3> </a>
           </li>
           <li class="btn">
-            <a data-name="p-1" class="work-button btn-image">See Project</a>
+            <a data-name="One" class="work-button">See Project</a>
           </li>
         </ul>
       </article>
@@ -166,7 +166,7 @@
             ><a href="" class="tag3"><h3>javascript</h3> </a>
           </li>
           <li class="btn">
-            <a data-name="p-2" class="work-button btn-image">See Project</a>
+            <a data-name="Two" class="work-button">See Project</a>
           </li>
         </ul>
       </article>
@@ -212,7 +212,7 @@
             ><a href="" class="tag3"><h3>javascript</h3> </a>
           </li>
           <li class="btn">
-            <a data-name="p-3" class="work-button btn-image">See Project</a>
+            <a data-name="Three" class="work-button">See Project</a>
           </li>
         </ul>
       </article>
@@ -252,7 +252,7 @@
             ><a href="" class="tag3"><h3>javascript</h3> </a>
           </li>
           <li class="btn">
-            <a data-name="p-4" class="work-button btn-image">See Project</a>
+            <a data-name="Four" class="work-button">See Project</a>
           </li>
         </ul>
       </article>
@@ -393,6 +393,8 @@
         <input class="btn" type="submit" value="Get In Touch" />
       </form>
     </footer>
+
+    <section class="pop-section"></section>
 
     <script src="./script.js"></script>
   </body>
