Add hover effect on nav links

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <a href="" class="snapshot">
           <img
             class="image-1"
-            src="./Worksection Pics/snap1.png"
+            src="./Worksection Pics/dsk1.png"
             alt="First Project demo"
             width="100%"
           />
@@ -134,7 +134,7 @@
         <a href="" class="snapshot" id="swap-pos">
           <img
             class="image-2"
-            src="./Worksection Pics/snap2.png"
+            src="./Worksection Pics/dsk2.png"
             alt="Second Project demo"
             width="100%"
           />
@@ -179,7 +179,7 @@
             class="w3imgdt"
           />
           <img
-            src="./Worksection Pics/snap3.png"
+            src="./desktopPics/newsnap.png"
             alt="Third Project demo"
             width="100%"
             class="image-1 w3imgmb"
@@ -220,7 +220,7 @@
         <a href="" class="snapshot" id="swap-pos">
           <img
             class="image-1"
-            src="./Worksection Pics/snap4.png"
+            src="./Worksection Pics/dsk4.png"
             alt="Fourth Project demo"
             width="100%"
           />
