Add constant for form email input and error p tag

--- a/index.html
+++ b/index.html
@@ -357,7 +357,11 @@
         with it
       </p>
 
-      <form action="https://formspree.io/f/xwkzojgo" method="post">
+      <form
+        action="https://formspree.io/f/xwkzojgo"
+        method="post"
+        class="form-js"
+      >
         <label for="input-name">Name</label>
         <input
           name="namearea"
@@ -370,7 +374,7 @@
         />
         <label for="Email">Email</label>
         <input
-          id="Email"
+          id="email-js"
           name="emailarea"
           class="input"
           type="email"
@@ -392,6 +396,7 @@
 
         <input class="btn" type="submit" value="Get In Touch" />
       </form>
+      <p class="error-js"></p>
     </footer>
 
     <section class="pop-section"></section>
