style header section

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <body>
     <header id="toolbar">
       <nav>
-        <a class="logo-nav" href=""
-          ><img src="./Pictures/My Logo.png" alt="Website Logo" />
-        </a>
+        <a class="logo-nav" href="/"><h1 class="logo-h1">Nabeel Akbar</h1> </a>
         <ul>
           <li><a href="#port-folio">Portfolio</a></li>
           <li><a href="#about-me">About</a></li>
