--- a/index.html
+++ b/index.html
@@ -61,25 +61,27 @@
       <div class="hero-socialcontainer">
         <ul class="social-container">
           <li>
-            <a href=""
+            <a href="https://twitter.com/StudiosNabeel"
               ><img src="./Pictures/Social/twitter.png" alt="Twitter logo"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="https://www.linkedin.com/in/studiosnabeel/"
               ><img src="./Pictures/Social/linkedin.png" alt="Linkedin logo"
             /></a>
           </li>
           <li>
-            <a href=""><img src="./Pictures/Social/m.png" alt="m logo" /></a>
+            <a href="https://medium.com/@studiosnabeel"
+              ><img src="./Pictures/Social/m.png" alt="m logo"
+            /></a>
           </li>
           <li>
-            <a href=""
+            <a href="https://github.com/studiosnabeel"
               ><img src="./Pictures/Social/github.png" alt="Github logo"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="/"
               ><img src="./Pictures/Social/victory.png" alt="Victory logo"
             /></a>
           </li>
@@ -89,33 +91,36 @@
 
     <section class="work" id="port-folio">
       <article class="card" id="work-article-1">
-        <a href="" class="snapshot">
+        <a href="https://studiosnabeel.github.io/codeeasy/" class="snapshot">
           <img
             class="image-1"
-            src="./Worksection Pics/dsk1.png"
+            src="./Worksection Pics/codeeasy.PNG"
             alt="First Project demo"
             width="100%"
           />
         </a>
         <ul class="leftblock">
           <li .primarytext>
-            <h2>Tonic</h2>
+            <h2>Code Easy</h2>
             <div class="frame">
-              <a href="" class="client"><h3 class="clienttext">Canopy</h3></a>
+              <a href="" class="client"><h3 class="clienttext">School</h3></a>
               <a href=""
                 ><img src="./Worksection Pics/Counter.png" alt="Counter"
               /></a>
-              <a href="" class="role"><h3 class="roletext">Back End Dev</h3></a>
+              <a href="" class="role"
+                ><h3 class="roletext">Front End Dev</h3></a
+              >
               <a href=""
                 ><img src="./Worksection Pics/Counter.png" alt="Counter"
               /></a>
-              <a href="" class="year"><h3 class="yeartext">2015</h3></a>
+              <a href="" class="year"><h3 class="yeartext">2022</h3></a>
             </div>
           </li>
 
           <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
+            Code Easy is an Online teaching website created for students to
+            learn software development. It is created using HTML CSS and Vanilla
+            JavaScript.
           </p>
 
           <li class="tags">
@@ -129,33 +134,39 @@
         </ul>
       </article>
       <article class="card" id="work-article-2">
-        <a href="" class="snapshot" id="swap-pos">
+        <a
+          href="https://studiosnabeel.github.io/groupCapstone/dist/"
+          class="snapshot"
+          id="swap-pos"
+        >
           <img
             class="image-2"
-            src="./Worksection Pics/dsk2.png"
+            src="./Worksection Pics/Movies.PNG"
             alt="Second Project demo"
             width="100%"
           />
         </a>
         <ul class="leftblock" id="pos-swap">
           <li .primarytext>
-            <h2>Multi-Post Stories</h2>
+            <h2>Movie Nights</h2>
             <div class="frame">
-              <a href="" class="client"><h3 class="clienttext">Canopy</h3></a>
+              <a href="" class="client"><h3 class="clienttext">Movie</h3></a>
               <a href=""
                 ><img src="./Worksection Pics/Counter.png" alt="Counter"
               /></a>
-              <a href="" class="role"><h3 class="roletext">Back End Dev</h3></a>
+              <a href="" class="role"
+                ><h3 class="roletext">Front End Dev</h3></a
+              >
               <a href=""
                 ><img src="./Worksection Pics/Counter.png" alt="Counter"
               /></a>
-              <a href="" class="year"><h3 class="yeartext">2015</h3></a>
+              <a href="" class="year"><h3 class="yeartext">2022</h3></a>
             </div>
           </li>
 
           <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
+            Movie Nights is a Single page app where users can watch latest
+            movies. Modular JavaScript was applied for this project.
           </p>
 
           <li class="tags">
@@ -169,15 +180,15 @@
         </ul>
       </article>
       <article class="card" id="work-article-3">
-        <a href="" class="snapshot">
+        <a href="https://mysite-g8gc.onrender.com/" class="snapshot">
           <img
-            src="./desktopPics/newsnap.png"
+            src="./Worksection Pics/pocketpal.PNG"
             alt="Desktop Third Project demo"
             width="100%"
             class="w3imgdt"
           />
           <img
-            src="./desktopPics/newsnap.png"
+            src="./Worksection Pics/pocketpal.PNG"
             alt="Third Project demo"
             width="100%"
             class="image-1 w3imgmb"
@@ -185,29 +196,31 @@
         </a>
         <ul class="leftblock">
           <li .primarytext>
-            <h2>Tonic</h2>
+            <h2>PocketPal</h2>
             <div class="frame">
-              <a href="" class="client"><h3 class="clienttext">Canopy</h3></a>
+              <a href="" class="client"><h3 class="clienttext">Budget</h3></a>
               <a href=""
                 ><img src="./Worksection Pics/Counter.png" alt="Counter"
               /></a>
-              <a href="" class="role"><h3 class="roletext">Back End Dev</h3></a>
+              <a href="" class="role"
+                ><h3 class="roletext">Full Stack Dev</h3></a
+              >
               <a href=""
                 ><img src="./Worksection Pics/Counter.png" alt="Counter"
               /></a>
-              <a href="" class="year"><h3 class="yeartext">2015</h3></a>
+              <a href="" class="year"><h3 class="yeartext">2023</h3></a>
             </div>
           </li>
 
           <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
+            This Rails Full-stack app is a expenses tracking app. It supports
+            user registration and authentication using the Devise gem.
           </p>
 
           <li class="tags">
-            <a href="" class="tag1"><h3>html</h3> </a
-            ><a href="" class="tag2"><h3>css</h3> </a
-            ><a href="" class="tag3"><h3>javascript</h3> </a>
+            <a href="" class="tag1"><h3>rails</h3> </a
+            ><a href="" class="tag2"><h3>ruby</h3> </a
+            ><a href="" class="tag3"><h3>postgresql</h3> </a>
           </li>
           <li class="btn">
             <a data-name="Three" class="work-button">See Project</a>
@@ -215,39 +228,46 @@
         </ul>
       </article>
       <article class="card" id="work-article-4">
-        <a href="" class="snapshot" id="swap-pos">
+        <a
+          href="https://countries-stats.netlify.app/"
+          class="snapshot"
+          id="swap-pos"
+        >
           <img
             class="image-1"
-            src="./Worksection Pics/dsk4.png"
+            src="./Worksection Pics/Coutries.PNG"
             alt="Fourth Project demo"
             width="100%"
           />
         </a>
         <ul class="leftblock" id="pos-swap">
           <li .primarytext>
-            <h2>Multi-Post Stories</h2>
+            <h2>Countries Stats</h2>
             <div class="frame">
-              <a href="" class="client"><h3 class="clienttext">Canopy</h3></a>
+              <a href="" class="client"><h3 class="clienttext">Stats</h3></a>
               <a href=""
                 ><img src="./Worksection Pics/Counter.png" alt="Counter"
               /></a>
-              <a href="" class="role"><h3 class="roletext">Back End Dev</h3></a>
+              <a href="" class="role"
+                ><h3 class="roletext">Front End Dev</h3></a
+              >
               <a href=""
                 ><img src="./Worksection Pics/Counter.png" alt="Counter"
               /></a>
-              <a href="" class="year"><h3 class="yeartext">2015</h3></a>
+              <a href="" class="year"><h3 class="yeartext">2022</h3></a>
             </div>
           </li>
 
           <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
+            This React-Redux application fetches data of Countries from an API
+            and shows All Countries population and capitals. And it also shows
+            details about a certain country when user clicks on it.
           </p>
 
           <li class="tags">
-            <a href="" class="tag1"><h3>html</h3> </a
+            <a href="" class="tag1"><h3>react</h3> </a
             ><a href="" class="tag2"><h3>css</h3> </a
-            ><a href="" class="tag3"><h3>javascript</h3> </a>
+            ><a href="" class="tag3"><h3>redux</h3> </a>
           </li>
           <li class="btn">
             <a data-name="Four" class="work-button">See Project</a>
@@ -258,10 +278,7 @@
 
     <section class="about-container" id="about-me">
       <section class="about">
-        <h2>
-          About <br />
-          Myself
-        </h2>
+        <h2>About Myself</h2>
 
         <p>
           Hello I’m a software developer! I can help you build a product ,
@@ -274,12 +291,12 @@
 
         <ul class="social-container">
           <li>
-            <a href=""
+            <a href="https://github.com/studiosnabeel"
               ><img src="./Pictures/Social/github.png" alt="Github logo"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="https://www.linkedin.com/in/studiosnabeel/"
               ><img src="./Pictures/Social/linkedin.png" alt="Linkedin logo"
             /></a>
           </li>
@@ -289,19 +306,25 @@
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="https://twitter.com/StudiosNabeel"
               ><img src="./Pictures/Social/twitter.png" alt="Twitter logo"
             /></a>
           </li>
           <li>
-            <a href=""><img src="./Pictures/Social/m.png" alt="m logo" /></a>
+            <a href="https://medium.com/@studiosnabeel"
+              ><img src="./Pictures/Social/m.png" alt="m logo"
+            /></a>
           </li>
         </ul>
-        <a class="btn1">Get my resume</a>
+        <a
+          href="https://www.linkedin.com/resume-builder/urn:li:fsd_memberResume:60442132/?edit=true"
+          class="btn1"
+          >Get my Resume</a
+        >
       </section>
 
       <section class="languages">
-        <div class="lang-divs">
+        <div class="lang-div">
           <h2>Languages</h2>
           <i class="fa-solid fa-chevron-down"></i>
         </div>
