--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@
           <li class="menuLinks"><a href="#contactMe">Contact</a></li>
         </ul>
         <div class="close-container">
-          <a
-            class="close-icon fa fa-times"
-            id="crossClose"
-            style="color: white; cursor: pointer"
-          ></a>
+          <a class="close-icon fa fa-times" id="crossClose"></a>
         </div>
       </div>
     </header>
