minor change to test

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="close-container">
           <a
             class="close-icon fa fa-times"
-            id="crossClose"
+            id="crossClose1"
             style="color: white; cursor: pointer"
           ></a>
         </div>
