--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li class="menuLinks"><a href="#contactMe">Contact</a></li>
         </ul>
         <div class="close-container">
-          <a class="close-icon fa fa-times" alt="close-icon"></a>
+          <a class="close-icon fa fa-times" id="crossClose" alt="close-icon"></a>
         </div>
       </div>
     </header>
