--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
 
           <p>
             This React-Redux application fetches data of Countries from an API
-            and shows All Countries population and capitals. And it also shows
-            details about a certain country when user clicks on it.
+            and shows All Countries population and capitals.
+       
           </p>
 
           <li class="tags">
