--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <header id="toolbar">
       <nav>
-        <a class="logo-nav" href="/"><h1 class="logo-h1">Nabeel Akbar</h1> </a>
+        <a class="logo-nav" href="#about-me"
+          ><h1 class="logo-h1">Nabeel Akbar</h1>
+        </a>
         <ul>
           <li><a href="#port-folio">Portfolio</a></li>
           <li><a href="#about-me">About</a></li>
@@ -36,7 +38,11 @@
           <li class="menuLinks"><a href="#contactMe">Contact</a></li>
         </ul>
         <div class="close-container">
-          <a class="close-icon fa fa-times" id="crossClose" alt="close-icon"></a>
+          <a
+            class="close-icon fa fa-times"
+            id="crossClose"
+            alt="close-icon"
+          ></a>
         </div>
       </div>
     </header>
@@ -257,7 +263,6 @@
           <p>
             This React-Redux application fetches data of Countries from an API
             and shows All Countries population and capitals.
-       
           </p>
 
           <li class="tags">
@@ -283,8 +288,7 @@
           contact me.
         </p>
 
-        <h3>LET'S CONNECT</h3>
-
+        <a href="#contactMe" class="letsConnect"><h3>LET'S CONNECT</h3> </a>
         <ul class="social-container">
           <li>
             <a href="https://github.com/studiosnabeel"
@@ -312,11 +316,7 @@
             /></a>
           </li>
         </ul>
-        <a
-          href="https://www.linkedin.com/resume-builder/urn:li:fsd_memberResume:60442132/?edit=true"
-          class="btn1"
-          >Get my Resume</a
-        >
+        <a href="./Resume/Resume Nabeel.pdf" class="btn1">Get my Resume</a>
       </section>
 
       <section class="languages">
