Naming various Sections

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+
+  <!-- Navigation Section -->
+
     <header id="toolbar">
       <nav>
         <a class="logo-nav" href="#about-me"
@@ -46,6 +49,8 @@
         </div>
       </div>
     </header>
+
+    <!-- Hero Section -->
 
     <section class="hero">
       <h1>
@@ -90,6 +95,8 @@
         </ul>
       </div>
     </section>
+
+    <!-- Work Section -->
 
     <section class="work" id="port-folio">
       <article class="card" id="work-article-1">
@@ -277,6 +284,8 @@
       </article>
     </section>
 
+  <!-- About Section -->
+
     <section class="about-container" id="about-me">
       <section class="about">
         <h2>About Myself</h2>
@@ -318,6 +327,8 @@
         </ul>
         <a href="./Resume/Resume Nabeel.pdf" class="btn1">Get my Resume</a>
       </section>
+
+    <!-- About Section/Skills -->
 
       <section class="languages">
         <div class="lang-div">
@@ -364,6 +375,8 @@
         </div>
       </section>
     </section>
+
+  <!-- Contact Section -->
 
     <footer class="contact-me" id="contactMe">
       <h2>Contact me</h2>
