--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
   </head>
 
   <body>
-
-  <!-- Navigation Section -->
+    <!-- Navigation Section -->
 
     <header id="toolbar">
       <nav>
         <a class="logo-nav" href="#about-me"
           ><h1 class="logo-h1">Nabeel Akbar</h1>
         </a>
-        <ul>
+        <ul class="nav-ul">
           <li><a href="#port-folio">Portfolio</a></li>
           <li><a href="#about-me">About</a></li>
           <li><a href="#contactMe">Contact</a></li>
@@ -53,46 +52,50 @@
     <!-- Hero Section -->
 
     <section class="hero">
-      <h1>
-        I'm Nabeel
-        <br />
-        Glad to see you!
-      </h1>
-      <p>
-        I'm a software developer! I can help you build a product, feature or
-        website look through some of my work and experience! If you like what
-        you see and have a project you need coded, don't hesitate to contact me.
-      </p>
-      <h2>LET'S CONNECT</h2>
+      <div class="div-hero">
+        <h1>
+          I'm Nabeel
+          <br />
+          Glad to see you!
+        </h1>
+        <p>
+          I'm a software developer! I can help you build a product, feature or
+          website look through some of my work and experience! If you like what
+          you see and have a project you need coded, don't hesitate to contact
+          me.
+        </p>
 
-      <div class="hero-socialcontainer">
-        <ul class="social-container">
-          <li>
-            <a href="https://twitter.com/StudiosNabeel"
-              ><img src="./Pictures/Social/twitter.png" alt="Twitter logo"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/studiosnabeel/"
-              ><img src="./Pictures/Social/linkedin.png" alt="Linkedin logo"
-            /></a>
-          </li>
-          <li>
-            <a href="https://medium.com/@studiosnabeel"
-              ><img src="./Pictures/Social/m.png" alt="m logo"
-            /></a>
-          </li>
-          <li>
-            <a href="https://github.com/studiosnabeel"
-              ><img src="./Pictures/Social/github.png" alt="Github logo"
-            /></a>
-          </li>
-          <li>
-            <a href="/"
-              ><img src="./Pictures/Social/victory.png" alt="Victory logo"
-            /></a>
-          </li>
-        </ul>
+        <a href="#contactMe" class="letsConnect"><h2>LET'S CONNECT</h2></a>
+
+        <div class="hero-socialcontainer">
+          <ul class="social-container">
+            <li>
+              <a href="https://twitter.com/StudiosNabeel"
+                ><img src="./Pictures/Social/twitter.png" alt="Twitter logo"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/studiosnabeel/"
+                ><img src="./Pictures/Social/linkedin.png" alt="Linkedin logo"
+              /></a>
+            </li>
+            <li>
+              <a href="https://medium.com/@studiosnabeel"
+                ><img src="./Pictures/Social/m.png" alt="m logo"
+              /></a>
+            </li>
+            <li>
+              <a href="https://github.com/studiosnabeel"
+                ><img src="./Pictures/Social/github.png" alt="Github logo"
+              /></a>
+            </li>
+            <li>
+              <a href="/"
+                ><img src="./Pictures/Social/victory.png" alt="Victory logo"
+              /></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
@@ -284,7 +287,7 @@
       </article>
     </section>
 
-  <!-- About Section -->
+    <!-- About Section -->
 
     <section class="about-container" id="about-me">
       <section class="about">
@@ -328,7 +331,7 @@
         <a href="./Resume/Resume Nabeel.pdf" class="btn1">Get my Resume</a>
       </section>
 
-    <!-- About Section/Skills -->
+      <!-- About Section/Skills -->
 
       <section class="languages">
         <div class="lang-div">
@@ -376,7 +379,7 @@
       </section>
     </section>
 
-  <!-- Contact Section -->
+    <!-- Contact Section -->
 
     <footer class="contact-me" id="contactMe">
       <h2>Contact me</h2>
