more styling fixes

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           />
         </a>
         <ul class="leftblock">
-          <li .primarytext>
+          <li class="primarytext">
             <h2>Code Easy</h2>
             <div class="frame">
               <a href="" class="client"><h3 class="clienttext">School</h3></a>
@@ -427,7 +427,7 @@
           required
         ></textarea>
 
-        <input class="btn" type="submit" value="Get In Touch" />
+        <input class="contact-btn" type="submit" value="Get In Touch" />
       </form>
       <p class="error-js"></p>
     </footer>
