--- a/index.html
+++ b/index.html
@@ -345,19 +345,35 @@
           </div>
 
           <div class="lang-divs" id="lang">
-            <img src="./Languages Pictures/HTML.png" alt="HTML logo" />
-            <h3>HTML</h3>
+            <img
+              src="./Languages Pictures/icons8-ruby-programming-language-48.png"
+              alt="Ruby logo"
+            />
+            <h3>Ruby</h3>
           </div>
 
           <div class="lang-divs" id="lang">
-            <img src="./Languages Pictures/CSS.png" alt="CSS logo" />
-            <h3>CSS</h3>
+            <img
+              src="./Languages Pictures/icons8-postgresql-48.png"
+              alt="postgresql logo"
+            />
+            <h3>PostgreSQL</h3>
           </div>
         </div>
 
         <div class="lang-skills">
-          <h3>Frameworks</h3>
+          <button class="framework-button" id="framework">
+            Frameworks/Libraries
+          </button>
           <i class="fa-solid fa-chevron-right"></i>
+        </div>
+        <div class="framework-dropdown" id="framework-menu">
+          <ul class="framework-dropdown-ul">
+            <li class="framework-dropdown-li">React</li>
+            <li class="framework-dropdown-li">Redux</li>
+            <li class="framework-dropdown-li">Rails</li>
+            <li class="framework-dropdown-li">Sass</li>
+          </ul>
         </div>
         <div class="lang-seperators">
           <img
@@ -367,8 +383,16 @@
         </div>
 
         <div class="lang-skills">
-          <h3>Skills</h3>
+          <button class="skills-button" id="skills">Skills</button>
           <i class="fa-solid fa-chevron-right" id="skills-arrow"></i>
+        </div>
+        <div class="skills-dropdown" id="skills-menu">
+          <ul class="skills-dropdown-ul">
+            <li class="skills-dropdown-li">Web Developer</li>
+            <li class="skills-dropdown-li">Remote work</li>
+            <li class="skills-dropdown-li">Management</li>
+            <li class="skills-dropdown-li">Communication</li>
+          </ul>
         </div>
         <div class="lang-seperators">
           <img
