styling fixes to drop downs

--- a/index.html
+++ b/index.html
@@ -388,10 +388,14 @@
         </div>
         <div class="skills-dropdown" id="skills-menu">
           <ul class="skills-dropdown-ul">
-            <li class="skills-dropdown-li">Web Developer</li>
-            <li class="skills-dropdown-li">Remote work</li>
-            <li class="skills-dropdown-li">Management</li>
-            <li class="skills-dropdown-li">Communication</li>
+            <div>
+              <li class="skills-dropdown-li">Web Developer</li>
+              <li class="skills-dropdown-li">Remote work</li>
+            </div>
+            <div>
+              <li class="skills-dropdown-li">Management</li>
+              <li class="skills-dropdown-li">Communication</li>
+            </div>
           </ul>
         </div>
         <div class="lang-seperators">
