Link to landing page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header id="toolbar">
       <nav>
-        <a class="logo-nav" href="#about-me"
+        <a class="logo-nav" href="#"
           ><h1 class="logo-h1">Nabeel Akbar</h1>
         </a>
         <ul class="nav-ul">
