--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header id="toolbar">
       <nav>
-        <a class="logo-nav" href="#"
+        <a class="logo-nav" href="#hero"
           ><h1 class="logo-h1">Nabeel Akbar</h1>
         </a>
         <ul class="nav-ul">
@@ -51,7 +51,7 @@
 
     <!-- Hero Section -->
 
-    <section class="hero">
+    <section class="hero" id="#hero">
       <div class="div-hero">
         <h1>
           I'm Nabeel
@@ -328,7 +328,7 @@
             /></a>
           </li>
         </ul>
-        <a href="./Resume/Resume Nabeel.pdf" class="btn1">Get my Resume</a>
+        <a href="./Resume/Nabeel's Resume.pdf" class="btn1">Get my Resume</a>
       </section>
 
       <!-- About Section/Skills -->
