Drop down functionality transfered to chev icons.

--- a/index.html
+++ b/index.html
@@ -362,10 +362,10 @@
         </div>
 
         <div class="lang-skills">
-          <button class="framework-button" id="framework">
+          <button class="framework-button" >
             Frameworks/Libraries
           </button>
-          <i class="fa-solid fa-chevron-right"></i>
+          <i class="fa-solid fa-chevron-right" id="framework"></i>
         </div>
         <div class="framework-dropdown" id="framework-menu">
           <ul class="framework-dropdown-ul">
